--- a/index.ipynb
+++ b/index.ipynb
@@ -67,21 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_x_cubed = (1, 3)"
+    "one_x_cubed = (1, 3)\n",
+    "second_f = (8,9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72, 8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def find_term_derivative(term):\n",
-    "    pass"
+    "    constant = term[0]*term[1]\n",
+    "    exponent = term[1]-1\n",
+    "    return (constant, exponent)\n",
+    "\n",
+    "find_term_derivative(second_f)"
    ]
   },
   {
@@ -125,22 +141,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "def find_derivative(function_terms):\n",
-    "    pass"
+    "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term),function_terms))\n",
+    "    return list(filter(lambda derivative_term: derivative_term[0] != 0, derivative_terms))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(12, 2), (-3, 0)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "four_x_cubed_minus_three_x = [(4, 3), (-3, 1)]\n",
-    "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]"
+    "find_derivative(four_x_cubed_minus_three_x)  "
    ]
   },
   {
@@ -448,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
